Sun Nov 30 22:00:58 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Add an example of specifying LUA_SO to --help output.

Sun Nov 30 21:49:48 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Rework LUA_SO checks to be clearer and to properly
	  handle LUA_SO being specified without a leading '.'.

Sun Nov 30 15:46:08 GMT 2014  James Aylett <james@tartarus.org>

	* configure.ac: use \{0,1\} instead of \? for better sed
	  portability.

Mon Nov 24 19:58:34 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.3.2.

Mon Nov 24 10:45:30 GMT 2014  Olly Betts <olly@survex.com>

	* configure.ac: Update comment about MACOSX_DEPLOYMENT_TARGET -
	  OS X 10.2 is long obsolete now.

Sun Nov 23 23:57:02 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS,csharp/Makefile.am,csharp/docs/index.rst,fake_dbfactory.i,
	  java/Makefile.am,lua/docs/index.rst,php/docs/index.rst,
	  python/docs/introduction.rst,python/smoketest.py,
	  python3/docs/introduction.rst,python3/smoketest.py,
	  ruby/docs/index.rst,tcl8/docs/index.rst,xapian-head.i,
	  xapian-headers.i: Update for renaming of 'brass' backend to 'glass'.

Sun Nov 23 05:14:03 GMT 2014  Olly Betts <olly@survex.com>

	* python/docs/introduction.rst: Fix typo.

Sun Nov 09 22:48:08 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS: Update.

Tue Nov 04 20:38:38 GMT 2014  Olly Betts <olly@survex.com>

	* php/docs/index.rst: Note that PHP < 5.4 are now out of security
	  support.

Tue Nov 04 04:38:06 GMT 2014  Olly Betts <olly@survex.com>

	* php/smoketest.php: Iterating foreach ($it as $k => $c) doesn't work
	  unless $k is a string or integer in PHP < 5.5, so test the old way
	  under older versions.

Tue Nov 04 04:25:57 GMT 2014  Olly Betts <olly@survex.com>

	* php/smoketest.php: Remove disabling of subclassing tests for PHP
	  versions >= 5.4.

Mon Nov 03 22:11:19 GMT 2014  Olly Betts <olly@survex.com>

	* INSTALL,php/docs/index.rst: In current PHP releases, dl() will only